--- a/index.html
+++ b/index.html
@@ -5,29 +5,44 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Amusement Park</title>
+    <title>Pet Quiz</title>
   </head>
   <body>
     <div class="container">
-
       <h1>What's my perfect pet?</h1>
 
       <form class="" action="index.html" method="post">
 
+        <ol>
+          <li>How often are you home?</li>
+          <div class="radio">
+            <label>
+              <input type="radio" name="home" value="often">
+              Often
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="home" value="sometimes">
+              Sometimes
+            </label>
+          </div>
+          <div class="radio">
+            <label>
+              <input type="radio" name="home" value="rarely">
+              Rarely
+            </label>
+          </div>
 
-      <ol>
-        <li>How often are you home?</li>
-          
+          <li>How often do you like to play with your pet?</li>
 
-        <li>How often do you like to play with your pet?</li>
+          <li>How big is your living space?</li>
 
-        <li>How big is your living space?</li>
-
-        <li>What's your noise level tolerance?</li>
+          <li>What's your noise level tolerance?</li>
 
 
 
-      </ol>
+        </ol>
       </form>
     </div>
   </body>
