Add more radio buttons.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1>What's my perfect pet?</h1>
 
-      <form class="" action="index.html" method="post">
+      <form id="quiz">
 
         <ol>
           <li>How often are you home?</li>
@@ -35,11 +35,64 @@
           </div>
 
           <li>How often do you like to play with your pet?</li>
+          <div class ="radio">
+            <label for="play">
+              <input type="radio" name="play" value="often">
+              Often
+            </label>
+          </div>
+          <div class ="radio">
+            <label>
+              <input type="radio" name="play" value="sometimes">
+              Sometimes
+            </label>
+          </div>
+          <div class ="radio">
+            <label>
+              <input type="radio" name="play" value="rarely">
+              Rarely
+            </label>
+          </div>
 
           <li>How big is your living space?</li>
+          <div class ="radio">
+            <label for="play">
+              <input type="radio" name="space" value="large">
+              Large
+            </label>
+          </div>
+          <div class ="radio">
+            <label>
+              <input type="radio" name="space" value="medium">
+              Medium
+            </label>
+          </div>
+          <div class ="radio">
+            <label>
+              <input type="radio" name="space" value="small">
+              Small
+            </label>
+          </div>
 
           <li>What's your noise level tolerance?</li>
-
+          <div class ="radio">
+            <label for="play">
+              <input type="radio" name="noise" value="high">
+              High: Noise doesn't bother me.
+            </label>
+          </div>
+          <div class ="radio">
+            <label for="play">
+              <input type="radio" name="noise" value="medium">
+              Medium: I'm ok with a bit of noise, but not too much.
+            </label>
+          </div>
+          <div class ="radio">
+            <label for="play">
+              <input type="radio" name="noise" value="low">
+              Low: A quiet living space is very important to me.
+            </label>
+          </div>
 
 
         </ol>
