Add panels and CSS panels.

--- a/index.html
+++ b/index.html
@@ -9,94 +9,96 @@
   </head>
   <body>
     <div class="container">
+      <div class="panel panel-default" id="quiz-title">
       <h1>What's my perfect pet?</h1>
+      </div>
+      
+      <div class="panel panel-default" id="questions">
+        <form id="quiz">
+          <ol>
+            <li>How often are you home?</li>
+            <div class="radio">
+              <label>
+                <input type="radio" name="home" value="often">
+                Often
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="home" value="sometimes">
+                Sometimes
+              </label>
+            </div>
+            <div class="radio">
+              <label>
+                <input type="radio" name="home" value="rarely">
+                Rarely
+              </label>
+            </div>
 
-      <form id="quiz">
+            <li>How often do you like to play with your pet?</li>
+            <div class ="radio">
+              <label for="play">
+                <input type="radio" name="play" value="often">
+                Often
+              </label>
+            </div>
+            <div class ="radio">
+              <label>
+                <input type="radio" name="play" value="sometimes">
+                Sometimes
+              </label>
+            </div>
+            <div class ="radio">
+              <label>
+                <input type="radio" name="play" value="rarely">
+                Rarely
+              </label>
+            </div>
 
-        <ol>
-          <li>How often are you home?</li>
-          <div class="radio">
-            <label>
-              <input type="radio" name="home" value="often">
-              Often
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="home" value="sometimes">
-              Sometimes
-            </label>
-          </div>
-          <div class="radio">
-            <label>
-              <input type="radio" name="home" value="rarely">
-              Rarely
-            </label>
-          </div>
+            <li>How big is your living space?</li>
+            <div class ="radio">
+              <label for="play">
+                <input type="radio" name="space" value="large">
+                Large
+              </label>
+            </div>
+            <div class ="radio">
+              <label>
+                <input type="radio" name="space" value="medium">
+                Medium
+              </label>
+            </div>
+            <div class ="radio">
+              <label>
+                <input type="radio" name="space" value="small">
+                Small
+              </label>
+            </div>
 
-          <li>How often do you like to play with your pet?</li>
-          <div class ="radio">
-            <label for="play">
-              <input type="radio" name="play" value="often">
-              Often
-            </label>
-          </div>
-          <div class ="radio">
-            <label>
-              <input type="radio" name="play" value="sometimes">
-              Sometimes
-            </label>
-          </div>
-          <div class ="radio">
-            <label>
-              <input type="radio" name="play" value="rarely">
-              Rarely
-            </label>
-          </div>
+            <li>What's your noise level tolerance?</li>
+            <div class ="radio">
+              <label for="play">
+                <input type="radio" name="noise" value="high">
+                High: Noise doesn't bother me.
+              </label>
+            </div>
+            <div class ="radio">
+              <label for="play">
+                <input type="radio" name="noise" value="medium">
+                Medium: I'm ok with a bit of noise, but not too much.
+              </label>
+            </div>
+            <div class ="radio">
+              <label for="play">
+                <input type="radio" name="noise" value="low">
+                Low: A quiet living space is very important to me.
+              </label>
+            </div>
+          </ol>
+        </form>
+      </div>
 
-          <li>How big is your living space?</li>
-          <div class ="radio">
-            <label for="play">
-              <input type="radio" name="space" value="large">
-              Large
-            </label>
-          </div>
-          <div class ="radio">
-            <label>
-              <input type="radio" name="space" value="medium">
-              Medium
-            </label>
-          </div>
-          <div class ="radio">
-            <label>
-              <input type="radio" name="space" value="small">
-              Small
-            </label>
-          </div>
-
-          <li>What's your noise level tolerance?</li>
-          <div class ="radio">
-            <label for="play">
-              <input type="radio" name="noise" value="high">
-              High: Noise doesn't bother me.
-            </label>
-          </div>
-          <div class ="radio">
-            <label for="play">
-              <input type="radio" name="noise" value="medium">
-              Medium: I'm ok with a bit of noise, but not too much.
-            </label>
-          </div>
-          <div class ="radio">
-            <label for="play">
-              <input type="radio" name="noise" value="low">
-              Low: A quiet living space is very important to me.
-            </label>
-          </div>
-
-
-        </ol>
-      </form>
     </div>
   </body>
 </html>
