Add JS if-else statements and results panels.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <div class="panel panel-default" id="quiz-title">
       <h1>What's my perfect pet?</h1>
       </div>
-      
-      <div class="panel panel-default" id="questions">
+
+      <div class="panel panel-default quiz">
         <form id="quiz">
           <ol>
             <li>How often are you home?</li>
@@ -96,7 +96,18 @@
               </label>
             </div>
           </ol>
+          <button type="submit" class="btn">Show me my pet!</button>
         </form>
+      </div>
+
+      <div class="panel panel-default quiz results" id="dog">
+        <p>Congratulations! You would make a great dog owner.</p>
+      </div>
+      <div class="panel panel-default quiz results" id="cat">
+        <p>Congratulations! You would make a great cat owner.</p>
+      </div>
+      <div class="panel panel-default quiz results" id="turtle">
+        <p>Congratulations! You would make a great turtle owner.</p>
       </div>
 
     </div>
